// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateFernColorPalette > Should generate fern colors 1`] = `
{
  "accent": "oklch(62.42% 0.1929 143.94)",
  "accentContrast": "#fff",
  "accentScale": [
    "#f9fdf8",
    "#f3faf2",
    "#e4f6e3",
    "#d4f1d3",
    "#c0eabf",
    "#a8dfa6",
    "#86d185",
    "#4fbc52",
    "#1ba32a",
    "#009618",
    "#00810c",
    "#1a3e1b",
  ],
  "accentScaleAlpha": [
    "#51555003",
    "#19721809",
    "#07a00618",
    "#03a60228",
    "#05a8043d",
    "#05a10156",
    "#039e0278",
    "#009e06af",
    "#009812e4",
    "#009618",
    "#00810c",
    "#002802e5",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0.0078 0.0196 0 / 0.008)",
    "color(display-p3 0.0118 0.3882 0.1255 / 0.032)",
    "color(display-p3 0.0549 0.5569 0 / 0.088)",
    "color(display-p3 0.0902 0.6039 0 / 0.148)",
    "color(display-p3 0.0588 0.6078 0 / 0.22)",
    "color(display-p3 0.0824 0.5804 0.0039 / 0.316)",
    "color(display-p3 0.0902 0.5725 0 / 0.44)",
    "color(display-p3 0.0824 0.5647 0 / 0.62)",
    "color(display-p3 0.0784 0.5098 0 / 0.752)",
    "color(display-p3 0.0824 0.4784 0 / 0.804)",
    "color(display-p3 0.0824 0.4078 0 / 0.848)",
    "color(display-p3 0.0196 0.1294 0 / 0.876)",
  ],
  "accentScaleWideGamut": [
    "oklch(98.9% 0.0073 143.9)",
    "oklch(97.7% 0.0125 143.9)",
    "oklch(95.5% 0.0315 143.9)",
    "oklch(92.8% 0.0504 143.9)",
    "oklch(89.5% 0.0721 143.9)",
    "oklch(85.1% 0.0972 143.9)",
    "oklch(79.2% 0.1294 143.9)",
    "oklch(70.9% 0.1772 143.9)",
    "oklch(62.4% 0.1929 143.9)",
    "oklch(58.3% 0.1929 143.9)",
    "oklch(52% 0.1766 143.9)",
    "oklch(32.7% 0.0729 143.9)",
  ],
  "accentSurface": "#f1f9f0cc",
  "accentSurfaceWideGamut": "color(display-p3 0.9529 0.9765 0.9451 / 0.8)",
  "appearance": "light",
  "background": "oklch(99.56% 0.0078 139.44)",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#fbfdfc",
    "#f7f9f8",
    "#eef1f0",
    "#e6e9e8",
    "#dfe2e0",
    "#d7dad9",
    "#cbcfcd",
    "#b8bcba",
    "#868e8b",
    "#7c8481",
    "#5f6563",
    "#1a211e",
  ],
  "grayScaleAlpha": [
    "#00804004",
    "#00402008",
    "#002d1e11",
    "#001f1519",
    "#00180820",
    "#00140d28",
    "#00140a34",
    "#000f0847",
    "#00110b79",
    "#00100a83",
    "#000a07a0",
    "#000805e5",
  ],
  "grayScaleAlphaWideGamut": [
    "#00804004",
    "#00402008",
    "#002d1e11",
    "#001f1519",
    "#00180820",
    "#00140d28",
    "#00140a34",
    "#000f0847",
    "#00110b79",
    "#00100a83",
    "#000a07a0",
    "#000805e5",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.986 0.992 0.988)",
    "color(display-p3 0.97 0.977 0.974)",
    "color(display-p3 0.935 0.944 0.94)",
    "color(display-p3 0.904 0.913 0.909)",
    "color(display-p3 0.875 0.885 0.88)",
    "color(display-p3 0.844 0.854 0.849)",
    "color(display-p3 0.8 0.811 0.806)",
    "color(display-p3 0.725 0.738 0.732)",
    "color(display-p3 0.531 0.556 0.546)",
    "color(display-p3 0.492 0.515 0.506)",
    "color(display-p3 0.377 0.395 0.389)",
    "color(display-p3 0.107 0.129 0.118)",
  ],
  "graySurface": "#ffffffcc",
  "graySurfaceWideGamut": "color(display-p3 1 1 1 / 80%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "oklch(99.56% 0.0078 139.44)",
}
`;

exports[`generateFernColorPalette > Should generate fern colors 2`] = `
{
  "accent": "oklch(62.42% 0.1929 143.94)",
  "accentContrast": "#fff",
  "accentScale": [
    "#091009",
    "#121a12",
    "#192a19",
    "#1a3b1a",
    "#204921",
    "#275928",
    "#2e6a2f",
    "#347c36",
    "#1ba32a",
    "#009618",
    "#60d563",
    "#b8f4b6",
  ],
  "accentScaleAlpha": [
    "#88108802",
    "#f0f8f00b",
    "#a3fda31c",
    "#6cff6c2e",
    "#6dff713d",
    "#6dff704e",
    "#6cfd6f61",
    "#69fd6e74",
    "#27ff409d",
    "#00ff248f",
    "#73fe76d3",
    "#c0febef4",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0.0431 0.0667 0.8196 / 0.005)",
    "color(display-p3 0.9765 1 0.9725 / 0.042)",
    "color(display-p3 0.7255 1 0.6863 / 0.109)",
    "color(display-p3 0.5765 1 0.5059 / 0.176)",
    "color(display-p3 0.5922 1 0.5059 / 0.235)",
    "color(display-p3 0.5882 1 0.5176 / 0.302)",
    "color(display-p3 0.5882 1 0.5098 / 0.373)",
    "color(display-p3 0.5843 1 0.5059 / 0.444)",
    "color(display-p3 0.4745 1 0.3765 / 0.607)",
    "color(display-p3 0.4392 1 0.3216 / 0.553)",
    "color(display-p3 0.6078 1 0.5373 / 0.812)",
    "color(display-p3 0.8078 1 0.7765 / 0.946)",
  ],
  "accentScaleWideGamut": [
    "oklch(16.2% 0.0185 143.9)",
    "oklch(20.7% 0.0185 143.9)",
    "oklch(26.5% 0.0394 143.9)",
    "oklch(31.8% 0.0686 143.9)",
    "oklch(36.6% 0.0813 143.9)",
    "oklch(41.6% 0.0947 143.9)",
    "oklch(46.8% 0.1097 143.9)",
    "oklch(52.4% 0.1278 143.9)",
    "oklch(62.4% 0.1929 143.9)",
    "oklch(58.3% 0.1929 143.9)",
    "oklch(78% 0.1866 143.9)",
    "oklch(91.1% 0.1024 143.9)",
  ],
  "accentSurface": "#1c241c80",
  "accentSurfaceWideGamut": "color(display-p3 0.1176 0.1412 0.1098 / 0.5)",
  "appearance": "dark",
  "background": "oklch(16.16% 0.021 144.53)",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#111210",
    "#181917",
    "#212220",
    "#282a27",
    "#2f312e",
    "#383a36",
    "#454843",
    "#5c625b",
    "#687066",
    "#767d74",
    "#afb5ad",
    "#eceeec",
  ],
  "grayScaleAlpha": [
    "#00000000",
    "#f1f2f008",
    "#f4f5f312",
    "#f3fef21a",
    "#f2fbf122",
    "#f4faed2c",
    "#f2fced3b",
    "#edfdeb57",
    "#ebfde766",
    "#f0fdec74",
    "#f6fef4b0",
    "#fdfffded",
  ],
  "grayScaleAlphaWideGamut": [
    "#00000000",
    "#f1f2f008",
    "#f4f5f312",
    "#f3fef21a",
    "#f2fbf122",
    "#f4faed2c",
    "#f2fced3b",
    "#edfdeb57",
    "#ebfde766",
    "#f0fdec74",
    "#f6fef4b0",
    "#fdfffded",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.067 0.07 0.063)",
    "color(display-p3 0.095 0.098 0.091)",
    "color(display-p3 0.131 0.135 0.126)",
    "color(display-p3 0.158 0.163 0.153)",
    "color(display-p3 0.186 0.192 0.18)",
    "color(display-p3 0.221 0.229 0.215)",
    "color(display-p3 0.273 0.284 0.266)",
    "color(display-p3 0.365 0.382 0.359)",
    "color(display-p3 0.414 0.438 0.404)",
    "color(display-p3 0.467 0.49 0.458)",
    "color(display-p3 0.69 0.709 0.682)",
    "color(display-p3 0.927 0.933 0.926)",
  ],
  "graySurface": "rgba(0, 0, 0, 0.05)",
  "graySurfaceWideGamut": "color(display-p3 0 0 0 / 5%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "oklch(16.16% 0.021 144.53)",
}
`;

exports[`generateFernColorPalette > should generate humanloop colors 1`] = `
{
  "accent": "#2A6A42",
  "accentContrast": "#fff",
  "accentScale": [
    "#fafefb",
    "#f5fbf6",
    "#e5f7ea",
    "#d5f1dd",
    "#c4e9ce",
    "#b0ddbc",
    "#96cca6",
    "#71b787",
    "#2a6a42",
    "#195b34",
    "#38774e",
    "#26402e",
  ],
  "accentScaleAlpha": [
    "#00cc3305",
    "#00991a0a",
    "#00b1321a",
    "#00aa312a",
    "#01a02c3b",
    "#0092274f",
    "#00842769",
    "#007e288e",
    "#004d1dd5",
    "#00491ee6",
    "#00511cc7",
    "#001f09d9",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0.0235 0.7569 0.0235 / 0.016)",
    "color(display-p3 0.0235 0.5647 0.0235 / 0.036)",
    "color(display-p3 0.0118 0.6157 0.1412 / 0.091)",
    "color(display-p3 0.0078 0.6 0.1137 / 0.146)",
    "color(display-p3 0.0039 0.5608 0.098 / 0.204)",
    "color(display-p3 0.0039 0.502 0.0745 / 0.275)",
    "color(display-p3 0.0039 0.451 0.0863 / 0.369)",
    "color(display-p3 0.0039 0.4157 0.0824 / 0.495)",
    "color(display-p3 0 0.2314 0.051 / 0.765)",
    "color(display-p3 0 0.2157 0.051 / 0.824)",
    "color(display-p3 0 0.251 0.0549 / 0.718)",
    "color(display-p3 0 0.0902 0.0157 / 0.828)",
  ],
  "accentScaleWideGamut": [
    "oklch(99.3% 0.0047 153.4)",
    "oklch(98.2% 0.0089 153.4)",
    "oklch(96% 0.0255 153.4)",
    "oklch(93.3% 0.0403 153.4)",
    "oklch(90% 0.0531 153.4)",
    "oklch(85.6% 0.0645 153.4)",
    "oklch(79.8% 0.0784 153.4)",
    "oklch(72.1% 0.1007 153.4)",
    "oklch(47.1% 0.0925 153.4)",
    "oklch(41.9% 0.0925 153.4)",
    "oklch(51.5% 0.0925 153.4)",
    "oklch(34.4% 0.0457 153.4)",
  ],
  "accentSurface": "#f3faf4cc",
  "accentSurfaceWideGamut": "color(display-p3 0.9569 0.9804 0.9608 / 0.8)",
  "appearance": "light",
  "background": "#FFF",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#fcfdfc",
    "#f8faf8",
    "#eff1ef",
    "#e7e9e7",
    "#dfe2df",
    "#d7dad7",
    "#cccfcc",
    "#b9bcb8",
    "#898e87",
    "#7f847d",
    "#60655f",
    "#1d211c",
  ],
  "grayScaleAlpha": [
    "#00550003",
    "#00490007",
    "#00200010",
    "#00160018",
    "#00180020",
    "#00140028",
    "#000f0033",
    "#040f0047",
    "#050f0078",
    "#040e0082",
    "#020a00a0",
    "#010600e3",
  ],
  "grayScaleAlphaWideGamut": [
    "#00550003",
    "#00490007",
    "#00200010",
    "#00160018",
    "#00180020",
    "#00140028",
    "#000f0033",
    "#040f0047",
    "#050f0078",
    "#040e0082",
    "#020a00a0",
    "#010600e3",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.989 0.992 0.989)",
    "color(display-p3 0.974 0.98 0.973)",
    "color(display-p3 0.939 0.945 0.937)",
    "color(display-p3 0.907 0.914 0.905)",
    "color(display-p3 0.878 0.885 0.875)",
    "color(display-p3 0.846 0.855 0.843)",
    "color(display-p3 0.803 0.812 0.8)",
    "color(display-p3 0.727 0.738 0.723)",
    "color(display-p3 0.541 0.556 0.532)",
    "color(display-p3 0.5 0.515 0.491)",
    "color(display-p3 0.38 0.395 0.374)",
    "color(display-p3 0.117 0.129 0.111)",
  ],
  "graySurface": "#ffffffcc",
  "graySurfaceWideGamut": "color(display-p3 1 1 1 / 80%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "#fff",
}
`;

exports[`generateFernColorPalette > should generate humanloop colors 2`] = `
{
  "accent": "#2A6A42",
  "accentContrast": "#fff",
  "accentScale": [
    "#09100b",
    "#121a14",
    "#172b1d",
    "#163b24",
    "#1c492d",
    "#235837",
    "#296941",
    "#2e7c4c",
    "#2a6a42",
    "#245938",
    "#7fcc97",
    "#b4f3c6",
  ],
  "accentScaleAlpha": [
    "#b1000003",
    "#f1d1b70c",
    "#99fea71c",
    "#5cff942d",
    "#61ff993c",
    "#64fd9b4d",
    "#63fd9a5f",
    "#5eff9a73",
    "#64fd9c60",
    "#66fd9c4e",
    "#a0febcc9",
    "#bdfecff3",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0.8196 0 0 / 0.005)",
    "color(display-p3 0.9961 0.8549 0.7451 / 0.045)",
    "color(display-p3 0.7412 0.9922 0.7137 / 0.106)",
    "color(display-p3 0.5569 0.9961 0.6392 / 0.173)",
    "color(display-p3 0.5608 1 0.6392 / 0.232)",
    "color(display-p3 0.5686 1 0.6588 / 0.295)",
    "color(display-p3 0.5725 1 0.6588 / 0.366)",
    "color(display-p3 0.5608 1 0.651 / 0.442)",
    "color(display-p3 0.5765 1 0.6588 / 0.37)",
    "color(display-p3 0.5765 1 0.6667 / 0.299)",
    "color(display-p3 0.7216 1 0.7686 / 0.778)",
    "color(display-p3 0.8 1 0.8314 / 0.942)",
  ],
  "accentScaleWideGamut": [
    "oklch(16.6% 0.0152 153.4)",
    "oklch(20.8% 0.0163 153.4)",
    "oklch(26.6% 0.0361 153.4)",
    "oklch(31.8% 0.0596 153.4)",
    "oklch(36.6% 0.07 153.4)",
    "oklch(41.5% 0.0803 153.4)",
    "oklch(46.8% 0.0925 153.4)",
    "oklch(52.5% 0.1076 153.4)",
    "oklch(47.1% 0.0925 153.4)",
    "oklch(41.9% 0.0803 153.4)",
    "oklch(78% 0.1076 153.4)",
    "oklch(90.9% 0.0879 153.4)",
  ],
  "accentSurface": "#1d231c80",
  "accentSurfaceWideGamut": "color(display-p3 0.1176 0.1333 0.1176 / 0.5)",
  "appearance": "dark",
  "background": "#07110C",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#101211",
    "#171918",
    "#202221",
    "#272a29",
    "#2e3130",
    "#373b39",
    "#444947",
    "#5b625f",
    "#63706b",
    "#717d79",
    "#adb5b2",
    "#eceeed",
  ],
  "grayScaleAlpha": [
    "#00000000",
    "#f0f2f108",
    "#f3f5f412",
    "#f2fefd1a",
    "#f1fbfa22",
    "#edfbf42d",
    "#edfcf73c",
    "#ebfdf657",
    "#dffdf266",
    "#e5fdf674",
    "#f4fefbb0",
    "#fdfffeed",
  ],
  "grayScaleAlphaWideGamut": [
    "#00000000",
    "#f0f2f108",
    "#f3f5f412",
    "#f2fefd1a",
    "#f1fbfa22",
    "#edfbf42d",
    "#edfcf73c",
    "#ebfdf657",
    "#dffdf266",
    "#e5fdf674",
    "#f4fefbb0",
    "#fdfffeed",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.064 0.07 0.067)",
    "color(display-p3 0.092 0.098 0.094)",
    "color(display-p3 0.128 0.135 0.131)",
    "color(display-p3 0.155 0.164 0.159)",
    "color(display-p3 0.183 0.193 0.188)",
    "color(display-p3 0.218 0.23 0.224)",
    "color(display-p3 0.269 0.285 0.277)",
    "color(display-p3 0.362 0.382 0.373)",
    "color(display-p3 0.398 0.438 0.421)",
    "color(display-p3 0.453 0.49 0.474)",
    "color(display-p3 0.685 0.709 0.697)",
    "color(display-p3 0.927 0.933 0.93)",
  ],
  "graySurface": "rgba(0, 0, 0, 0.05)",
  "graySurfaceWideGamut": "color(display-p3 0 0 0 / 5%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "#07110c",
}
`;

exports[`generateFernColorPalette > should generate vapi colors 1`] = `
{
  "accent": "#61F6B5",
  "accentContrast": "#0d281b",
  "accentScale": [
    "#f3f9f5",
    "#eaf7f0",
    "#d1f6e1",
    "#b7f2d3",
    "#9cebc3",
    "#80e0b1",
    "#57d09a",
    "#00bc7b",
    "#54ebab",
    "#47e1a1",
    "#007647",
    "#00472d",
  ],
  "accentScaleAlpha": [
    "#e9f9ff86",
    "#b6f0ff49",
    "#00e4b92e",
    "#00de9948",
    "#00d48663",
    "#00c6787f",
    "#00bb71a8",
    "#00bc7b",
    "#00e48cab",
    "#00d785b8",
    "#007647",
    "#00472d",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0.9137 0.9725 1 / 0.474)",
    "color(display-p3 0.6627 0.9255 1 / 0.211)",
    "color(display-p3 0.0039 0.8471 0.6627 / 0.15)",
    "color(display-p3 0.0039 0.8157 0.5412 / 0.233)",
    "color(display-p3 0.0039 0.7725 0.451 / 0.315)",
    "color(display-p3 0.0039 0.7098 0.3882 / 0.406)",
    "color(display-p3 0 0.6471 0.3451 / 0.524)",
    "color(display-p3 0 0.6 0.2941 / 0.67)",
    "color(display-p3 0.0039 0.8353 0.4471 / 0.493)",
    "color(display-p3 0 0.7765 0.4118 / 0.532)",
    "color(display-p3 0 0.3255 0.1412 / 0.804)",
    "color(display-p3 0 0.1922 0.098 / 0.894)",
  ],
  "accentScaleWideGamut": [
    "oklch(97.6% 0.0083 161.5)",
    "oklch(96.4% 0.0159 161.5)",
    "oklch(94% 0.0473 161.5)",
    "oklch(91.3% 0.0742 161.5)",
    "oklch(87.8% 0.0961 161.5)",
    "oklch(83.3% 0.1136 161.5)",
    "oklch(77.4% 0.134 161.5)",
    "oklch(69.7% 0.1684 161.5)",
    "oklch(84.4% 0.1577 161.5)",
    "oklch(81.3% 0.1576 161.5)",
    "oklch(48.8% 0.15 161.5)",
    "oklch(35% 0.0798 161.5)",
  ],
  "accentSurface": "#e5f7f1cc",
  "accentSurfaceWideGamut": "color(display-p3 0.9137 0.9608 0.9451 / 0.8)",
  "appearance": "light",
  "background": "#FFFAEA",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#fcfdfc",
    "#f8faf8",
    "#eff1ef",
    "#e7e9e7",
    "#dfe2df",
    "#d7dad7",
    "#cccfcc",
    "#b9bcb8",
    "#898e87",
    "#7f847d",
    "#60655f",
    "#1d211c",
  ],
  "grayScaleAlpha": [
    "#00550003",
    "#00490007",
    "#00200010",
    "#00160018",
    "#00180020",
    "#00140028",
    "#000f0033",
    "#040f0047",
    "#050f0078",
    "#040e0082",
    "#020a00a0",
    "#010600e3",
  ],
  "grayScaleAlphaWideGamut": [
    "#00550003",
    "#00490007",
    "#00200010",
    "#00160018",
    "#00180020",
    "#00140028",
    "#000f0033",
    "#040f0047",
    "#050f0078",
    "#040e0082",
    "#020a00a0",
    "#010600e3",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.989 0.992 0.989)",
    "color(display-p3 0.974 0.98 0.973)",
    "color(display-p3 0.939 0.945 0.937)",
    "color(display-p3 0.907 0.914 0.905)",
    "color(display-p3 0.878 0.885 0.875)",
    "color(display-p3 0.846 0.855 0.843)",
    "color(display-p3 0.803 0.812 0.8)",
    "color(display-p3 0.727 0.738 0.723)",
    "color(display-p3 0.541 0.556 0.532)",
    "color(display-p3 0.5 0.515 0.491)",
    "color(display-p3 0.38 0.395 0.374)",
    "color(display-p3 0.117 0.129 0.111)",
  ],
  "graySurface": "#ffffffcc",
  "graySurfaceWideGamut": "color(display-p3 1 1 1 / 80%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "#fffaea",
}
`;

exports[`generateFernColorPalette > should generate vapi colors 2`] = `
{
  "accent": "#61F6B5",
  "accentContrast": "#0d281b",
  "accentScale": [
    "#07110c",
    "#0c1b14",
    "#002e1c",
    "#003e22",
    "#004c2c",
    "#005b38",
    "#006e46",
    "#008555",
    "#61f6b5",
    "#55ecab",
    "#3eda9b",
    "#b0fbd4",
  ],
  "accentScaleAlpha": [
    "#00ce0004",
    "#00fb370e",
    "#00fe5d22",
    "#00fe6233",
    "#00fe7742",
    "#00fe8952",
    "#00fe9466",
    "#00ff9a7e",
    "#65ffbbf6",
    "#5bffb9eb",
    "#47ffb4d8",
    "#b3ffd7fb",
  ],
  "accentScaleAlphaWideGamut": [
    "color(display-p3 0 0.9608 0 / 0.013)",
    "color(display-p3 0.1294 1 0.2196 / 0.054)",
    "color(display-p3 0.0863 1 0.4078 / 0.129)",
    "color(display-p3 0.2353 0.9961 0.4314 / 0.196)",
    "color(display-p3 0.302 1 0.5216 / 0.254)",
    "color(display-p3 0.3412 0.9961 0.5804 / 0.316)",
    "color(display-p3 0.3725 0.9961 0.6235 / 0.391)",
    "color(display-p3 0.4118 1 0.6471 / 0.486)",
    "color(display-p3 0.5725 0.9961 0.7647 / 0.951)",
    "color(display-p3 0.5569 1 0.749 / 0.909)",
    "color(display-p3 0.5216 1 0.7373 / 0.835)",
    "color(display-p3 0.7725 1 0.8627 / 0.976)",
  ],
  "accentScaleWideGamut": [
    "oklch(16.6% 0.0178 161.5)",
    "oklch(20.7% 0.0261 161.5)",
    "oklch(26.7% 0.0595 161.5)",
    "oklch(31.3% 0.0883 161.5)",
    "oklch(35.9% 0.0972 161.5)",
    "oklch(41% 0.1027 161.5)",
    "oklch(47% 0.1129 161.5)",
    "oklch(53.9% 0.1321 161.5)",
    "oklch(87.6% 0.1577 161.5)",
    "oklch(84.6% 0.1577 161.5)",
    "oklch(79.4% 0.1577 161.5)",
    "oklch(92.8% 0.0912 161.5)",
  ],
  "accentSurface": "#0b281680",
  "accentSurfaceWideGamut": "color(display-p3 0.0706 0.1569 0.0863 / 0.5)",
  "appearance": "dark",
  "background": "#0E0E12",
  "border": undefined,
  "cardBackground": undefined,
  "grayScale": [
    "#111113",
    "#18191b",
    "#212225",
    "#272a2d",
    "#2e3135",
    "#363a3f",
    "#43484e",
    "#5a6169",
    "#696e77",
    "#777b84",
    "#b0b4ba",
    "#edeef0",
  ],
  "grayScaleAlpha": [
    "#00000000",
    "#d8f4f609",
    "#ddeaf814",
    "#d3edf81d",
    "#d9edfe25",
    "#d6ebfd30",
    "#d9edff40",
    "#d9edff5d",
    "#dfebfd6d",
    "#e5edfd7b",
    "#f1f7feb5",
    "#fcfdffef",
  ],
  "grayScaleAlphaWideGamut": [
    "#00000000",
    "#d8f4f609",
    "#ddeaf814",
    "#d3edf81d",
    "#d9edfe25",
    "#d6ebfd30",
    "#d9edff40",
    "#d9edff5d",
    "#dfebfd6d",
    "#e5edfd7b",
    "#f1f7feb5",
    "#fcfdffef",
  ],
  "grayScaleWideGamut": [
    "color(display-p3 0.067 0.067 0.074)",
    "color(display-p3 0.095 0.098 0.105)",
    "color(display-p3 0.13 0.135 0.145)",
    "color(display-p3 0.156 0.163 0.176)",
    "color(display-p3 0.183 0.191 0.206)",
    "color(display-p3 0.215 0.226 0.244)",
    "color(display-p3 0.265 0.28 0.302)",
    "color(display-p3 0.357 0.381 0.409)",
    "color(display-p3 0.415 0.431 0.463)",
    "color(display-p3 0.469 0.483 0.514)",
    "color(display-p3 0.692 0.704 0.728)",
    "color(display-p3 0.93 0.933 0.94)",
  ],
  "graySurface": "rgba(0, 0, 0, 0.05)",
  "graySurfaceWideGamut": "color(display-p3 0 0 0 / 5%)",
  "headerBackground": undefined,
  "headerBackgroundTheme": undefined,
  "sidebarBackground": undefined,
  "sidebarBackgroundTheme": undefined,
  "themeColor": "#0e0e12",
}
`;
